--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <title>Smart Safe</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
 </head>
