moving socket.io to /js folder

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 
 <head>
     <title>Smart Safe</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <script src="/js/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
 </head>
 
