--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Smart Safe</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <script src="/js/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
 </head>
 
